fix: 修改商家的定位和距离的计算
